--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,12 @@
                     </ul>
                 </nav>
                 <address class="adress">
-                    <a href="mailto:info@devstudio.com"><img src="./images/iconemail.svg" alt="Иконка" width="16">info@devstudio.com</a>
-                    <a href="tel:+380961111111" class="tel"><img src="./images/icontelephone.svg" alt="Иконка" width="10">+38 096 111 11
-                        11</a>
+                    <a href="mailto:info@devstudio.com"><svg class="icons-conection" width="16px" height="11px">
+                            <use href="./images/icons/sprite.svg#icon-email"></use>
+                        </svg> info@devstudio.com</a>
+                    <a href="tel:+380961111111" class="tel"><svg class="icons-conection" width="10px" height="15px">
+                            <use href="./images/icons/sprite.svg#icon-telephone"></use>
+                        </svg> +38 096 111 11 11</a>
                 </address>
             </div>
         </div>
@@ -40,18 +43,18 @@
     <main>
         <section class="box-works">
             <div class="container">
-                <h1>Примеры работ</h1>
+                <h1 class="visually-hidden">Примеры работ</h1>
                 <ul class="examples-buttons">
-                    <li class="item"><button type="button" class="item-but">Все</button></li>
-                    <li class="item"><button type="button" class="item-but">Веб-сайты</button></li>
-                    <li class="item"><button type="button" class="item-but">Приложения</button></li>
-                    <li class="item"><button type="button" class="item-but">Дизайн</button></li>
-                    <li class="item"><button type="button" class="item-but">Маркетинг</button></li>
+                    <li class="item"><button type="button" class="item-but all" >Все</button></li>
+                    <li class="item"><button type="button" class="item-but web">Веб-сайты</button></li>
+                    <li class="item"><button type="button" class="item-but app">Приложения</button></li>
+                    <li class="item"><button type="button" class="item-but design">Дизайн</button></li>
+                    <li class="item"><button type="button" class="item-but marketing">Маркетинг</button></li>
                 </ul>
                 <div class="flex-container">
                     <ul class="examples-links">
                         <li>
-                            <a href=""><img src="./images/img1.svg" alt="Изображение веб-сайта Технокряк" width="370"></a>
+                            <a href=""><img src="./images/project1.jpg" alt="веб-сайт Технокряк" width="370"></a>
                         </li>
                     <!-- <li>
                             <a href="">
@@ -75,7 +78,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img2.svg" alt="Изображение постера" width="370">
+                                <img src="./images/project2.jpg" alt="Постер" width="370">
                             </a>
                         </li>
                     <!-- <li>
@@ -98,7 +101,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img3.svg" alt="Изображение ресторана Seafood" width="370">
+                                <img src="./images/project3.jpg" alt="Ресторан Seafood" width="370">
                             </a>
                         </li>
                     <!-- <li>
@@ -120,7 +123,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img4.svg" alt="Изображение проекта Prime" width="370">
+                                <img src="./images/project4.jpg" alt="Проект Prime" width="370">
                             </a>
                         </li>
                     <!--  <li>
@@ -143,7 +146,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img5.svg" alt="Изображение проекта Boxes" width="370">
+                                <img src="./images/project5.jpg" alt="Проект Boxes" width="370">
                             </a>
                         </li>
                     <!--   <li>
@@ -165,7 +168,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img6.svg" alt="Изображение веб-сайта Inspiration has no Borders" width="370">
+                                <img src="./images/project6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370">
                             </a></li>
                     <!--  <li>
                             <a href="">
@@ -186,7 +189,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img7.svg" alt="Изображение дизайна издания Limited Edition" width="370">
+                                <img src="./images/project7.jpg" alt="Дизайн издания Limited Edition" width="370">
                             </a>
                         </li>
                     <!--  <li>
@@ -209,7 +212,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img8.svg" alt="Изображение проекта LAB" width="370">
+                                <img src="./images/project8.jpg" alt="Проект LAB" width="370">
                             </a>
                         </li>
                     <!-- <li>
@@ -232,7 +235,7 @@
                     <ul class="examples-links">
                         <li>
                             <a href="">
-                                <img src="./images/img9.svg" alt="Изображение приложения Growing Business" width="370">
+                                <img src="./images/project9.jpg" alt="Приложение Growing Business" width="370">
                             </a>
                         </li>
                       <!--  <li>
@@ -263,26 +266,44 @@
             <div class="footer-logo">
                 <a href="/"><span class="logo-left">Web </span><span class="logo-right">Studio</span></a>
                 <address class="adress-footer">
-                <p class="adress-part-one">г. Киев, пр-т Леси Украинки, 26</p>
-                <a href="mailto:info@devstudio.com" class="adress-part-two">info@example.com</a>
-                <a href="tel:+380961111111" class="adress-part-three">+38 099 111 11 11</a>
+                    <p class="adress-part-one">г. Киев, пр-т Леси Украинки, 26</p>
+                    <a href="mailto:info@devstudio.com" class="adress-part-two">info@example.com</a>
+                    <a href="tel:+380961111111" class="adress-part-three">+38 099 111 11 11</a>
                 </address>
             </div>
-            <p class="footer-link uppercase">Присоединяйтесь</p>
-            <!--<ul class="list-links">
-                <li><a href=""></a>
-                    <img src="./images/inst.svg" alt="Иконка инстаграм" width="44" class="link-items"></li>
-                <li><a href=""></a>
-                    <img src="./images/twit.svg" alt="Иконка твиттера" width="44" class="link-items"></li>
-                <li><a href=""></a>
-                    <img src="./images/face.svg" alt="Иконка фэйсбука" width="44" class="link-items"></li>
-                <li><a href=""></a>
-                    <img src="./images/linkedin.svg" alt="Иконка линкдин" width="44" class="link-items"></li>
-            </ul>-->
-            <!--<form action="submit" class="uppercase">Подпишитесь на рассылку
-                <input type="text" placeholder="E-mail">
-            </form>
-            <a href="#" class="button">Подписаться <img src="./images/icontelegram.svg" alt="Иконка телеграм" width="24"></a>-->
+            <div class="block-footer">
+                <p class="footer-link uppercase">Присоединяйтесь</p>
+                <ul class="list-links-footer">
+                    <li>
+                        <a href="">
+                            <div class="item-link-footer"><svg class="social-links">
+                                    <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                                </svg></div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="item-link-footer"><svg class="social-links">
+                                    <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                </svg></div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="item-link-footer"><svg class="social-links">
+                                    <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                                </svg></div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <div class="item-link-footer"><svg class="social-links">
+                                    <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                                </svg></div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div>
                 <p class="footer-link uppercase">Подпишитесь на рассылку</p>
                 <a href="" class="button">Подписаться</a>
