--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
                             <p class="team-position">Product Designer</p>
                             <ul class="list-links">
                                 <li>
-                                    <a href="" class="item-link">
+                                    <a href="/" class="item-link">
                                     <div class="item-link-style"><svg class="social-links">
                                         <use href="./images/icons/sprite.svg#icon-instagram"></use>
                                     </svg></div>
                                     </a>
                                 </li>
-                                <li><a href="">
+                                <li>
                                     <a href="" class="item-link">
                                         <div class="item-link-style"><svg class="social-links">
                                                 <use href="./images/icons/sprite.svg#icon-twitter"></use>
                                             </svg></div>
                                     </a>
-                                </a></li>
+                                </li>
                                 <li><a href="" class="item-link">
                                     <div class="item-link-style"><svg class="social-links">
                                             <use href="./images/icons/sprite.svg#icon-facebook"></use>
@@ -172,13 +172,13 @@
                                             </svg></div>
                                     </a>
                                 </li>
-                                <li><a href="">
-                                        <a href="" class="item-link">
-                                            <div class="item-link-style"><svg class="social-links">
-                                                    <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                                                </svg></div>
+                                <li>
+                                    <a href="" class="item-link">
+                                        <div class="item-link-style"><svg class="social-links">
+                                                <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                            </svg></div>
                                         </a>
-                                    </a></li>
+                                </li>
                                 <li><a href="" class="item-link">
                                         <div class="item-link-style"><svg class="social-links">
                                                 <use href="./images/icons/sprite.svg#icon-facebook"></use>
@@ -203,13 +203,13 @@
                                             </svg></div>
                                     </a>
                                 </li>
-                                <li><a href="">
+                                <li>
                                         <a href="" class="item-link">
                                             <div class="item-link-style"><svg class="social-links">
                                                     <use href="./images/icons/sprite.svg#icon-twitter"></use>
                                                 </svg></div>
                                         </a>
-                                    </a></li>
+                                    </li>
                                 <li><a href="" class="item-link">
                                         <div class="item-link-style"><svg class="social-links">
                                                 <use href="./images/icons/sprite.svg#icon-facebook"></use>
@@ -234,13 +234,13 @@
                                         </svg></div>
                                 </a>
                             </li>
-                            <li><a href="">
-                                    <a href="">
-                                        <div class="item-link-style"><svg class="social-links">
-                                                <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                                            </svg></div>
-                                    </a>
-                                </a></li>
+                            <li>
+                                <a href="">
+                                    <div class="item-link-style"><svg class="social-links">
+                                         <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                                        </svg></div>
+                                </a>
+                            </li>
                             <li><a href="">
                                     <div class="item-link-style"><svg class="social-links">
                                             <use href="./images/icons/sprite.svg#icon-facebook"></use>
